# Proyecto10_LLM_E1

./: .gitignore  README.md  docker-compose.yml  main.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/data/: history.db
backend/data/chroma_db/: chroma.sqlite3
backend/data/chroma_db/50762c3f-ba65-456b-b013-d91044e1b3d9/: index_metadata.pickle
backend/src/app/: config.py  main.py  profile.py
backend/src/app/agents/: blog_agent.py  finance_agent.py  graph.py  quality_check.py  router.py  science_agent.py  social_agent.py  state.py
backend/src/app/database/: database.py  models.py
backend/src/app/generators/: content_generator.py  llm_factory.py
backend/src/app/prompts/: blog.py  instagram.py  linkedin.py  twitter.py
backend/src/app/rag/: arxiv_loader.py  graph_rag.py  rag_chain.py  vector_store.py
backend/src/app/services/: hf_image_service.py  history_service.py  image_router.py  image_service.py  news_service.py  pollinations_service.py
backend/tests/: conftest.py  test_generate.py  test_history.py  test_image_services.py  test_news.py  test_profile.py  test_science.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ContentResult.tsx  GenerateForm.tsx  HistoryPanel.tsx  NewsSection.tsx  ProfileForm.tsx  ScienceForm.tsx
frontend/src/constants/: navigation.ts  site.ts
frontend/src/hooks/: useActiveProfile.ts  useGeneration.ts  useHistory.ts
frontend/src/routes/: __root.tsx  generate.tsx  history.tsx  index.tsx  news.tsx  profile.tsx  science.tsx
frontend/src/services/: api.ts
frontend/src/types/: content.ts
(+12 files in other folders)
