[project]
name = "project10-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.48.0",
]
