[project]
name = "project10-llm"
version = "0.1.0"
description = "Digital Content AI - Generación de contenido con LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]

[tool.uv]
package = false