[project]
name = "project10-llm"
version = "0.1.0"
description = "Digital Content AI - Generación de contenido con LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.6",
    "networkx>=3.6.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[tool.uv]
package = false
